--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
+    "csv-loader": "3.0.5",
     "lucide-react": "^0.460.0",
     "mapbox-gl": "3.8.0",
     "next": "^14.0.0",
